# stealth-runner

./: .env  .env.example  .gitignore  .gitnexus.yml  .pre-commit-config.yaml  .semgrep_rules.yaml  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE_DECISION_RECORD.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  FAQ.md  GRAPHIFY-ASSESSMENT.md  HEALTH_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_PLAN.md  Makefile  README.md  README_PARALLEL.md  ROADMAP.md  SECURITY.md  SOTA.md  STATUS.md  STEALTH-QUAD-API-CONCEPT.md  STEALTH-QUAD-HANDBOOK.md  STEALTH-SUITE-API-CONCEPT.md  STEALTH-SUITE-HANDBOOK.md  SUPPORT.md  TROUBLESHOOTING.md  ULTIMATE-PLAN.md  WHITE-LABEL.md  agents.md  anti-learn.md  api.md  api_server.py  architecture.md  banned.md  benchmarks.md  brain.md  (+66 more)
stealth-captcha/: .gitignore  INTEGRATION.md  pyproject.toml  test_drag_drop_angular.py
stealth-captcha/src/stealth_captcha/: __init__.py  _playwright_compat.py  bridge.py  cli.py  config.py  exceptions.py
stealth-captcha/src/stealth_captcha/cdp/: __init__.py  browser.py  client.py  targets.py
stealth-captcha/src/stealth_captcha/memory/: __init__.py  experience.py
stealth-captcha/src/stealth_captcha/payloads/: __init__.py  gocaptcha_slide.js
stealth-captcha/src/stealth_captcha/solver/: base.py  (+6 more)
survey-cli/: .gitignore  AGENTS.md  README.md  plan.md  plan_balance.md  plan_cdp_reconnect.md  plan_execution.md  plan_prequalifier.md  plan_stealth.md  pyproject.toml  requirements.txt  survey.py  survey_cli_entry.py  test_e2e_survey.py
survey-cli/commands/: answer_survey.py  find_survey.py  open_survey.py  preflight_check.py  start_heypiggy.py
survey-cli/data/: command_registry.json
survey-cli/evals/learn_suggester/: __init__.py  labels.golden.jsonl  run_eval.py
survey-cli/evals/trajectory/: __init__.py  last-report.json  run_eval.py  trajectories.golden.jsonl
survey-cli/survey/: __init__.py  accessibility.py  action_selector.py  autodoc.py  balance_tracker.py  captcha_adapters.py  captcha_router.py  cash_out_trigger.py  cdp_actuator.py  cdp_client.py  cdp_login.py  cdp_universal.py  chrome.py  command_registry.py  completion_detector.py  cua_fallback.py  daemon.py  daemon_manager.py  execute.py  google_login.py  js_dialog_handler.py  login.py  nim.py  oopif_registry.py  opencode_bridge.py  opener.py  pre_qualifier.py  profile_loader.py  qualification_rules.py  runner.py  runner_policy.py  safe_executor.py  scanner.py  session_validator.py  snapshot.py  snapshot_v2.py  survey_rater.py
survey-cli/survey/agents/: __init__.py  action_verifier.py  answer_generator.py  element_mapper.py  page_classifier.py  parallel_orchestrator.py  persona_checker.py  task_router.py
survey-cli/survey/auth/: __init__.py  cua_adapter.py  google_oauth.py  login_verifier.py
survey-cli/survey/captcha/: __init__.py  audio_solver.py  drag_drop_solver.py  fallback_chain.py  gateway_solver.py  nim_secondary_solver.py
survey-cli/survey/daemon/: __init__.py  _playwright_compat.py  answer_engine.py  browser_driver.py  captcha_solver.py  cli.py  heypiggy.py  stealth.py  survey_agent_graph.py  survey_daemon.py  survey_parser.py  survey_sources.py  verifier.py
survey-cli/survey/data/: .survey_lock.json
survey-cli/survey/graph/: __init__.py  action_recipes.py  checkpointer.py  graph.py  nodes.py  opencode_tool.py  promote.py  state.py  vision_fallback.py
survey-cli/survey/learn/: __init__.py  __main__.py  aggregator.py  apply.py  audit.py  cli.py  explain.py  llm_client.py  review.py  status.py  suggester.py
survey-cli/survey/network/: __init__.py  beacon_filter.py  cdp_network_tracker.py  ip_quality.py  proxy_pool.py
survey-cli/survey/observability/: __init__.py  dlq_health.py  health.py  logger.py  metrics.py  redact.py  visual_debug.py
survey-cli/survey/profiles/: anna_meyer.json  jeremy_schulze.json  sin_agent_heypiggy.json  thomas_weber.json
survey-cli/survey/providers/: __init__.py  base.py  generic.py  heypiggy.py  purespectrum.py  qualtrics.py  strat7.py  toluna.py
survey-cli/survey/reliability/: __init__.py  attestation.py  circuit_breaker.py  contradiction.py  dlq.py  env_check.py  full_stability.py  network_gate.py  personas_quarantine.py  rate_limit.py  retry_policy.py  stability.py  trajectory_judge.py  visual_hash.py  wireups.py
survey-cli/survey/security/: __init__.py
survey-cli/survey/stealth/: injection.js
survey-cli/survey/universal/: agent.py  loop.py
survey-cli/tests/: __init__.py  test_0_runner.py  test_action_recipes.py  test_action_recipes_read_wire.py  test_action_recipes_write_wire.py  test_action_selector.py  test_answer_engine_extended_types.py  test_attestation.py  test_auth.py  test_auto_google_login.py  test_autodoc.py  test_balance.py  test_balance_tracker.py  test_beacon_filter.py  test_captcha_fallback.py  test_captcha_solver.py  test_cash_out_trigger.py  test_cdp_client.py  test_cdp_network_tracker.py  test_checkpointer.py  test_chrome_launcher.py  test_circuit_breaker.py  test_cmd_watch_graph.py  test_command_registry_record_command.py  test_completion_detector.py  test_cua_foreground.py  test_daemon_cli.py  test_daemon_manager.py  test_decide_node_combobox.py  test_decide_node_vision_trigger.py  test_detection.py  test_dlq_health.py  test_drag_drop_solver.py  test_e2e_live_survey.py  test_env_check.py  test_eval_learn_suggester.py  test_execute.py  test_full_stability.py  test_gone_modules.py  test_graph_promotion.py  (+63 more)
survey-cli/tests/e2e/: __init__.py  test_tier1_mocked.py
survey-cli/tests/fixtures/: learn_apply_smoke_inbox.jsonl  learn_apply_smoke_profile.py  match_field_corpus.jsonl
survey-cli/tools/: README.md  __init__.py  eval_match_field.py  smoke_match_field.py  tool_anti_stuck.py  tool_click.py  tool_click_angular.py  tool_close_modals.py  tool_detect_completion.py  tool_fill_input.py  tool_fill_survey.py  tool_find_element.py  tool_find_new_tab.py  tool_google_login.py  tool_open_survey.py  tool_rate_survey.py  tool_scan_dashboard.py  tool_select_language.py  tool_snapshot.py  tool_solve_captcha.py  tool_solve_drag_puzzle.py  tool_universal_answer.py  tool_verify_state.py
(+770 files in other folders)
