[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stealth-sync"
version = "0.1.0"
description = "Stealth Suite module for automatic OpenCode session monitoring, semantic analysis, and documentation generation"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "SIN-CLIs", email = "openssin@proton.me" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "anyio>=4.0",
  "httpx>=0.28",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "python-dotenv>=1.0",
  "structlog>=24.4",
  "tenacity>=9.0",
  "typer>=0.12",
  "rich>=13.9",
  "aiosqlite>=0.19",
  "apscheduler>=3.10",
  "openai>=1.0",
  "pyyaml>=6.0",
  "json5>=0.9",
  "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "mypy>=1.14",
  "coverage>=7.0",
  "hypothesis>=6.112",
]

[project.scripts]
stealth-sync = "cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
disallow_untyped_defs = true
