[project]
name = "stealth-captcha"
version = "2.0.0"
description = "Production-grade CDP-based captcha solver for Stealth Suite CUA platform. Solves GoCaptcha, NetEase, GeeTest v3/v4, PureSpectrum, and text captchas via CDP Input.dispatchMouseEvent with stealth injection, Bezier trajectory, and episodic memory."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "SIN-CLIs", email = "openssin@proton.me" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "anyio>=4.4",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "tenacity>=8.3.0",
    "numpy>=1.26.0",
    "aiosqlite>=0.20.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "hypothesis>=6.112",
]
# CEO-WAVE-1: Optional Patchright backend for the Approach-A (Playwright
# raw mouse) drag-drop solver. Subprocess script tries patchright first
# and falls back to vanilla playwright; both are optional at install time
# because stealth-captcha can also drive the browser via raw CDP.
stealth = [
    "patchright>=1.49",
]

[project.scripts]
stealth-captcha = "stealth_captcha.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stealth_captcha"]

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "ASYNC", "SIM"]
ignore = [
    "S101",    # Allow assert
    "ASYNC109",  # Intentional: timeout parameter is more readable
    "E501",    # Allow long lines in JS strings and lambdas
]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/stealth_captcha/tests"]
addopts = "-ra --strict-markers -v"
