[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "survey-agent"
version = "1.0.0"
description = "Production-ready automated survey completion agent with anti-detection"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "SIN-CLIs", email = "dev@sin-clis.com" }
]
keywords = ["survey", "automation", "langgraph", "playwright", "anti-detection"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "playwright>=1.40.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
survey = "survey.daemon.cli:main"

[project.urls]
Homepage = "https://github.com/SIN-CLIs/stealth-runner"
Documentation = "https://github.com/SIN-CLIs/stealth-runner/blob/main/README.md"
Repository = "https://github.com/SIN-CLIs/stealth-runner"

[tool.hatch.build.targets.wheel]
packages = ["survey"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

